--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 #header .navbar-nav .nav-item .nav-link:hover,
 #header .navbar-nav .nav-item .nav-link.active{
     color:var(--second-fav-color);
-    
+
 }
 #header .fixed-top{
     box-shadow: 0 0.125rem 0.675rem rgb(0 0 0 /15%);
@@ -47,7 +47,7 @@ body {
     
 }
 #header .navbar .navbar-brand h2{
-   color:var(--second-fav-color) ;
+   color:var(--text-white) ;
 }
 #header .navbar-toggler:focus{
     box-shadow: none;
@@ -55,20 +55,6 @@ body {
 #header .navbar .navbar-brand .logo{
     width: 15%;
 }
-#second .video {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    padding: 0 5%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#second .video  .back-video{
-    
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
+#second .carousel-item{
+    height: 40%;
 }
