--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,9 @@
 }
 body {
     font-family: var(--primary-font);
-    font-size: 1rem;
     font-weight: 400;
-    line-height: 0.75rem;
-    background:var(--bg-white);
-    color: var(--text-black);
+    background:black;
+    color: var(--text-white);
     overflow-x:hidden;
 }
 /* NAVBAR CSS */
@@ -35,10 +33,15 @@ body {
     padding:0.5rem 0.5rem;
     text-align: center;
     margin-left: 10px;
+    font-size: 1.5rem;
 }
 #header .navbar-nav .nav-item .nav-link:hover,
 #header .navbar-nav .nav-item .nav-link.active{
     color:var(--second-fav-color);
+    padding:0.5rem 0.5rem;
+    text-align: center;
+    font-size: 1.5rem;
+    
 
 }
 #header .navbar{
@@ -55,6 +58,9 @@ body {
 #header .navbar .navbar-brand .logo{
     width: 15%;
 }
-#second .carousel-item{
-    height: 40%;
-}
+
+
+
+
+/* RESponsive */
+
