--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 body {
     font-family: var(--primary-font);
     font-weight: 400;
-    background:black;
+    background:#01071e;
     color: var(--text-white);
     overflow-x:hidden;
 }
@@ -60,6 +60,62 @@ body {
 }
 
 
+#second{
+    background-image: url('/images/car.jpg');
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
+.section-3 {
+    margin-bottom: 20%;
+    height: 70vmin;
+    margin-top: 15vmin;
+    background: black;
+    background: var(--bggradient);
+  }
+  
+  .section-3 .col-md-12 > h1 {
+    padding: 2em 0 0.5em 0;
+    color: aquamarine;
+    /* color: whitesmoke; */
+    font-family: prague;
+    font-size: 6vmin;
+  }
+  
+  .section-3 .col-md-12 > p {
+    padding: 0 4em;
+    padding-bottom: 2em;
+    color: var(--light-gray);
+    font-size: 3vmin;
+  }
+  
+  .section-3 .desktop {
+    background: mediumaquamarine;
+    display: inline-block;
+    border-radius: 3em;
+    padding: 2vmin 4.5vmin;
+    margin: 1em;
+  }
+  .section-3 .desktop h3 {
+    font-size: 4vmin;
+  }
+  
+  .section-3 .desktop p {
+    font-size: 2vmin;
+  }
+
+
+/* second section */
+
+
+
+  
 
 
 /* RESponsive */
