--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,4 @@
-.container-fluid{
+/* .container-fluid{
     background-color: black;
     width: 100%;
 }
@@ -28,4 +28,56 @@
 }
 .footerlinks h5{
     color: #ffffff4d;
-}
+} */
+.footerblock{
+    margin-top: 10%;
+    background-color: #01071e;
+    }
+    .footerimg{
+        position: relative;
+       
+    
+    }
+    .footercontent{
+        color: white;
+    }
+    .footercontent p{
+        font-family: serif;
+        font-size: 18px;
+        text-align: left;
+        word-spacing: 4px;
+    }
+    .footerheadings h4{
+        color:aquamarine ;
+        font-size: 20px;
+    }
+    .footerheadings a{
+        color:white ;
+        text-decoration: none;
+    
+    }
+    .footerheadings p{
+        color:aquamarine ;
+        text-decoration: none;
+    
+    }
+    
+    .footericons  i{
+        margin-right: 10px;
+        margin-bottom: 20px;
+        color: aquamarine;
+    }
+    .footerend{
+    
+        background-color: #000;
+        padding: 30px;
+    }
+    .footerend2 {
+        color: white;
+        font-family: serif;
+        font-size: 20px;
+    }
+    .footerend2 p a{ 
+        color: white;
+        text-decoration: none;
+    }
