--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,6 +26,22 @@
     margin-top: 28%;
     margin-left: 24%;
     }
+    .d2{
+        margin-top: 37px;
+        margin-bottom: 60px;
+        margin-left: 11px;
+    }
+    .d3{
+        margin-top: 100px;
+    }
+    .f1{
+        margin-left: 64px;
+    }
+    .b1 h6{
 
+        font-size: 15px;
+        margin-left: -10px;
+        
+    }
     
 }
