--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,5 +43,27 @@
         margin-left: -10px;
         
     }
+    #whyus .imgexperience{
+        left: 0%;
+    }
+    #whyus .col-md-7{
+        margin-left: 0px;
+    }
+    #whyus .row{
+        margin-top: 50px;
+    }
+    #whyus .imgexperience{
+        background-image: url("https://images.unsplash.com/photo-1632823639409-ce060d5a54cc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+        border: 2px sandybrown;
+        background-size: cover;
+        background-position: center;
+        border-radius: 10px;
+        box-shadow: 20px aquamarine;
+        width: 100%;
+        height: 300px;
+        position: relative;
+        
+      }
+
     
 }
