--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
   font-size: 100px ;
   position: absolute;
   left: 30%;
-  top: 30%;
+  top: 35%;
   
   transition: 0.3s;
 
@@ -208,6 +208,53 @@ body {
   backface-visibility: hidden;
   transform: rotateY(180deg);
 }
+#whyus .row{
+  margin-top: 100px;
+}
+#whyus .col-md-7 h1{
+  margin-top: 20%;
+}
+
+#whyus .imgexperience{
+  background-image: url("https://images.unsplash.com/photo-1632823639409-ce060d5a54cc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+  border: 2px sandybrown;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  box-shadow: 20px aquamarine;
+  width: 100%;
+  height: 500px;
+  position: relative;
+  left: 10%;
+}
+#whyus .experience_2 {
+margin-top: 100px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#whyus .experience_2 p{
+  font-size: 25px;
+}
+#whyus .experience_2 h1{
+  -webkit-text-stroke: 2px aquamarine;color: transparent;
+  
+}
+
+#whyus .col-md-7{
+  margin-left: 50px;
+}
+#whyus .imgexperience2{
+  background-image: url("https://images.unsplash.com/photo-1615906655593-ad0386982a0f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+  border: 2px sandybrown;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  box-shadow: 20px aquamarine;
+  width: 100%;
+  height: 500px;
+  position: relative;
+  
+}
+
 
 
 
